// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ProgressBar.Item animated 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-bricks-progress-bar-item-striped uu5-bricks-progress-bar-item-active"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item animated 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item animated 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item animated 4`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-bricks-progress-bar-item-striped uu5-bricks-progress-bar-item-active"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkGrammar 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkGrammar 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkGrammar 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkGrammar 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkHighlight 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkHighlight 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkHighlight 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkHighlight 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkSpaces 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkSpaces 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkSpaces 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item checkSpaces 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item className 1`] = `
<div
  className="uu5-bricks-progress-bar-item my-classname"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 1`] = `
<div
  className="color-schema-default uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 2`] = `
<div
  className="color-schema-red uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 3`] = `
<div
  className="color-schema-red uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 4`] = `
<div
  className="color-schema-red-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 5`] = `
<div
  className="color-schema-red-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 6`] = `
<div
  className="color-schema-green uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 7`] = `
<div
  className="color-schema-green uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 8`] = `
<div
  className="color-schema-green-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 9`] = `
<div
  className="color-schema-green-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 10`] = `
<div
  className="color-schema-yellow uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 11`] = `
<div
  className="color-schema-yellow uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 12`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 13`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 14`] = `
<div
  className="color-schema-purple uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 15`] = `
<div
  className="color-schema-purple uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 16`] = `
<div
  className="color-schema-purple-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 17`] = `
<div
  className="color-schema-purple-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 18`] = `
<div
  className="color-schema-brown uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 19`] = `
<div
  className="color-schema-brown uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 20`] = `
<div
  className="color-schema-brown-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 21`] = `
<div
  className="color-schema-brown-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 22`] = `
<div
  className="color-schema-orange uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 23`] = `
<div
  className="color-schema-orange uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 24`] = `
<div
  className="color-schema-orange-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 25`] = `
<div
  className="color-schema-orange-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 26`] = `
<div
  className="color-schema-cyan uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 27`] = `
<div
  className="color-schema-cyan uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 28`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 29`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 30`] = `
<div
  className="color-schema-grey uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 31`] = `
<div
  className="color-schema-grey uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 32`] = `
<div
  className="color-schema-grey-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 33`] = `
<div
  className="color-schema-grey-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 34`] = `
<div
  className="color-schema-pink uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 35`] = `
<div
  className="color-schema-pink uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 36`] = `
<div
  className="color-schema-pink-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 37`] = `
<div
  className="color-schema-pink-rich uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item colorSchema 38`] = `
<div
  className="color-schema-pink uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item content 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item content 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item content 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item content 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item controlled 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item controlled 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item controlled 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item controlled 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item default props 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item disabled 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-disabled"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item disabled 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item disabled 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item disabled 4`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-disabled"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item docKit examples UU5.Bricks.ProgressBar.Item should render without crash 1`] = `
<progress-bar-cover
  className="uu5-bricks-progress-bar uu5-bricks-progress-bar-size-m"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <ProgressBarItem
    animated={false}
    className={null}
    colorSchema="blue"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID2"
    ignoreInnerHTML={false}
    key="uuID2"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    progress={20}
    pureRender={false}
    ref_={null}
    selected={false}
    striped={true}
    style={null}
    tooltip={null}
  />
  <ProgressBarItem
    animated={false}
    className={null}
    colorSchema="purple"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID3"
    ignoreInnerHTML={false}
    key="uuID3"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    progress={30}
    pureRender={false}
    ref_={null}
    selected={false}
    striped={false}
    style={null}
    tooltip={null}
  />
  <ProgressBarItem
    animated={true}
    className={null}
    colorSchema="red"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID4"
    ignoreInnerHTML={false}
    key="uuID4"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    progress={45}
    pureRender={false}
    ref_={null}
    selected={false}
    striped={false}
    style={null}
    tooltip={null}
  />
</progress-bar-cover>
`;

exports[`UU5.Bricks.ProgressBar.Item dynamic 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item dynamic 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item dynamic 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item dynamic 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item hidden 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item hidden 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item hidden 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item hidden 4`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-hidden"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item id 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="myId"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item ignoreHTML 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item ignoreHTML 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item ignoreHTML 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item ignoreHTML 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item mainAttrs 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item name 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  name="myName"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 5`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 6`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 7`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 8`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 9`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 10`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 11`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 12`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 13`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 14`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 15`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 16`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 17`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 18`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 19`] = `""`;

exports[`UU5.Bricks.ProgressBar.Item nestingLevel 20`] = `""`;

exports[`UU5.Bricks.ProgressBar.Item noIndex 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-noindex"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item noIndex 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item noIndex 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item noIndex 4`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-noindex"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item progress 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item progress 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "50%",
    }
  }
  title={null}
>
  50 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item progress 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "50%",
    }
  }
  title={null}
>
  50 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item progress 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "100%",
    }
  }
  title={null}
>
  100 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item progress 5`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "100%",
    }
  }
  title={null}
>
  100 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item progress 6`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "50%",
    }
  }
  title={null}
>
  50 %
</div>
`;

exports[`UU5.Bricks.ProgressBar.Item pureRender 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item pureRender 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item pureRender 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item pureRender 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item selected 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-selected"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item selected 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item selected 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item selected 4`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-common-selected"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item striped 1`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-bricks-progress-bar-item-striped"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item striped 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item striped 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item striped 4`] = `
<div
  className="uu5-bricks-progress-bar-item uu5-bricks-progress-bar-item-striped"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item style 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item style 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item style 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item style 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item textCorrector 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item textCorrector 2`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item textCorrector 3`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item textCorrector 4`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.ProgressBar.Item tooltip 1`] = `
<div
  className="uu5-bricks-progress-bar-item"
  id="uuID"
  style={
    Object {
      "width": "0%",
    }
  }
  title="My Tooltip"
/>
`;
